# mfplot

./: app.py  constants.py  pyproject.toml  requirements.txt
classifier/: classifier.py
data_model/: argoverse_convertor.py  scene.py  waymo_convertor.py
figure_creation/: __init__.py  argoverse.py  figure_creator.py  general_data_model.py  shared.py  waymo.py
preprocessing/: functions.py
scripts/: bucket_conversion.py  convert_waymo.sh
