[tool.poetry]
name = "mfplot"
version = "0.1.0"
description = "Motion Forecasting Datasets"
authors = ["Anton Tmur <tmur.a@numdes.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "1.21.5"
tensorflow = "2.8.0"
dash = "^2.7.1"
av2 = "0.2.1"
dash-bootstrap-components = "^1.3.0"
dash-bootstrap-templates = "^1.0.7"
protobuf = "3.20.1"
google-cloud-storage = "^2.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
